--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "botbuilder": "^4.15.0",
+    "botbuilder-dialogs": "^4.15.0",
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "helmet": "^5.0.2",
